apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__extract_scopes.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 745
expression: doc
---
{
    "internal",
    "profile",
    "read:user",
    "read:username",
    "test",
}
