apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__filter_basic_query-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 819
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes:\n    [\"profile\".to_string(), \"internal\".to_string()].into_iter().collect(),\n    result: doc, paths\n}"
---
query:

        {
            topProducts {
                type
                internal
            }

            me {
                id
                name
            }
        }
        
extracted_scopes: {"internal", "profile", "read:user", "read:username", "test"}
request scopes: ["profile", "internal"]
filtered:
{
  topProducts {
    type
  }
}

paths: ["/topProducts/internal", "/me"]
