apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__filter_basic_query-3.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 841
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes:\n    [\"profile\".to_string(), \"read:user\".to_string(), \"internal\".to_string(),\n    \"test\".to_string(),].into_iter().collect(), result: doc, paths\n}"
---
query:

        {
            topProducts {
                type
                internal
            }

            me {
                id
                name
            }
        }
        
extracted_scopes: {"internal", "profile", "read:user", "read:username", "test"}
request scopes: ["profile", "read:user", "internal", "test"]
filtered:
{
  topProducts {
    type
    internal
  }
  me {
    id
  }
}

paths: ["/me/name"]
