apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__fragment_fields.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1159
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

        query {
            topProducts {
                type
                ...F
            }
        }

        fragment F on Product {
            reviews {
                body
            }
        }
        
extracted_scopes: {"review"}
request scopes: []
filtered:
{
  topProducts {
    type
  }
}

paths: ["/topProducts/reviews/@"]
