apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_field-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1389
expression: "TestResult\n{\n    query: QUERY2, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                    other
                }
                ... on B {
                    id
                    other
                }
            }
        }
        
extracted_scopes: {"a", "b", "c", "d"}
request scopes: []
filtered:
{
  test
  itf {
    ... on A {
      other
    }
    ... on B {
      other
    }
  }
}

paths: ["/itf/... on A/id", "/itf/... on B/id"]
