apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_field.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1361
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

        query {
            test
            itf {
                id
                other
            }
        }
        
extracted_scopes: {}
request scopes: []
filtered:
{
  test
  itf {
    other
  }
}

paths: ["/itf/id"]
