apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_fragment-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1112
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes:\n    [\"read:user\".to_string()].into_iter().collect(), result: doc, paths\n}"
---
query:

        query {
            topProducts {
                type
            }
            itf {
                id
                ...F
            }
        }

        fragment F on User {
            id2: id
            name
        }
        
extracted_scopes: {"read:user", "read:username"}
request scopes: ["read:user"]
filtered:
{
  topProducts {
    type
  }
  itf {
    id
    ...F
  }
}

fragment F on User {
  id2: id
}

paths: ["/itf/name"]
