apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_fragment-3.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1128
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes:\n    [\"read:user\".to_string(),\n    \"read:username\".to_string()].into_iter().collect(), result: doc, paths\n}"
---
query:

        query {
            topProducts {
                type
            }
            itf {
                id
                ...F
            }
        }

        fragment F on User {
            id2: id
            name
        }
        
extracted_scopes: {"read:user", "read:username"}
request scopes: ["read:user", "read:username"]
filtered:
{
  topProducts {
    type
  }
  itf {
    id
    ...F
  }
}

fragment F on User {
  id2: id
  name
}

paths: []
