apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_fragment.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1098
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

        query {
            topProducts {
                type
            }
            itf {
                id
                ...F
            }
        }

        fragment F on User {
            id2: id
            name
        }
        
extracted_scopes: {"read:user", "read:username"}
request scopes: []
filtered:
{
  topProducts {
    type
  }
  itf {
    id
  }
}

paths: ["/itf"]
